fix warning http plotocol

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 
 				<div class="weather-main__status">
-					<img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image weather status" class="weather-main__status-img">
+					<img src="https://openweathermap.org/img/wn/03d@2x.png" alt="image weather status" class="weather-main__status-img">
 				</div>
 
 				<div class="weather-main__description">
